# first-rendering-engine

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
lib/include/frengine/: camera.h  error.h  light.h  material.h  mesh.h  model.h  program.h  renderable.h  renderer.h  scene.h  texture.h
shaders/: fragment.glsl  fragment_texture.glsl  vertex.glsl
src/: main.cpp
